--- a/public/app/views/menu.html
+++ b/public/app/views/menu.html
@@ -17,12 +17,13 @@
     <script src="assets/js/angular-animate.js"></script>
 
     <!-- Cascade Style Sheets -->
-    
+    <link rel="stylesheet" type="text/css" href="assets/css/menu.css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css"> 
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/index.css">
+    
     
 
     <!-- Add icon library -->
@@ -83,8 +84,112 @@
         </div>
 
     </nav>
-      
 </div>
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="../../assets/images/flame-1.jpg" alt="Avatar" style="width:100%">
+            <footer>
+                <h2>Flamin Hot Doritos Locos Tacos</h2>
+                <h4>$1.89</h4>
+            </footer>
+        </div>
+    </div>
+   
+    <div class="column">
+        <div class="card">
+            <img src="../../assets/images/Triplelupa-3.jpg" alt="Avatar" style="width:100%">
+            <footer>
+                <h2>Triplelupa</h2>
+                <h4>$3.49</h4>
+            </footer>
+        </div>
+    </div>
+    
+    <div class="column">
+        <div class="card">
+            <img src="../../assets/images/soft taco-4.jpg" alt="Avatar" style="width: 85%;" >
+            <footer>
+                <h2>Soft Taco</h2>
+                <h4>$1.29</h4>
+            </footer>
+        </div>
+    </div>
+
+</div>
+
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="../../assets/images/Crunchy Taco-4.jpg" alt="Avatar" style="width:100%">
+            <footer>
+                <h2>Crunchy Taco</h2>
+                <h4>$1.29</h4>
+            </footer>
+        </div>
+    </div>
+   
+    <div class="column">
+        <div class="card">
+            <img src="../../assets/images/Nacho Cheese Doritos Locos Tacos-5.jpg" alt="Avatar" style="width:100%">
+            <footer>
+                <h2>Nacho Cheese Doritos Locos Tacos</h2>
+                <h4>$1.89</h4>
+            </footer>
+        </div>
+    </div>
+    
+    <div class="column">
+        <div class="card">
+            <img src="../../assets/images/Chalupa Superme-6.jpg" alt="Avatar" style="width: 85%;" >
+            <footer>
+                <h2>Chalupa Superme</h2>
+                <h4>$3.69</h4>
+            </footer>
+        </div>
+    </div>
+
+</div>
+
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="../../assets/images/Cheesy Gordita Crunch-7.jpg" alt="Avatar" style="width:100%">
+            <footer>
+                <h2>Cheesy Gordita Crunch</h2>
+                <h4>$3.69</h4>
+            </footer>
+        </div>
+    </div>
+   
+    <div class="column">
+        <div class="card">
+            <img src="../../assets/images/Spicy Potato Soft Taco-8.jpg" alt="Avatar" style="width:100%">
+            <footer>
+                <h2>Spicy Potato Soft Taco</h2>
+                <h4>$1.23</h4>
+            </footer>
+        </div>
+    </div>
+    
+    <div class="column">
+        <div class="card">
+            <img src="../../assets/images/Crunchwrap Superme-9.jpg" alt="Avatar" style="width: 85%;" >
+            <footer>
+                <h2>Crunchwrap Superme</h2>
+                <h4>$3.99</h4>
+            </footer>
+        </div>
+    </div>
+
+</div>
+
+
+
+
 <footer >
     <div class="container">
         <div class="row">
