--- a/public/assets/css/hireMeStyle.css
+++ b/public/assets/css/hireMeStyle.css
@@ -33,8 +33,8 @@ html, body {
     }
     .banner {
     position: relative;
-    height: 300px;
-    background-image: url(../images/vegTaco.jpg);
+    height: 600px;
+    background-image: url(../images/taco-man.png);
     background-size: cover;
     display: flex;
     justify-content: center;
