--- a/public/app/views/menu.html
+++ b/public/app/views/menu.html
@@ -38,7 +38,7 @@
     
     
 
-    <title>Taco Cart</title>
+    <title>Taco Cart Menu</title>
 
 </head>
 
@@ -69,8 +69,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="app/views/about.html">About Us</a>
                 </li>
-                
-                
+                    
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
                 </li>
