--- a/public/app/views/checkoutStatus.html
+++ b/public/app/views/checkoutStatus.html
@@ -3,9 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Payment status</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+.fa-check-circle-o{
+font-size:120px;
+color:green;
+}
+
+</style>
 </head>
 <body>
-  <h1>Hello world!</h1>
+  <i class="fa fa-check-circle-o"></i>
+  <h1>Order Placed SuccesFully.</h1>
 </body>
 </html>
