--- a/public/app/views/hireMe.html
+++ b/public/app/views/hireMe.html
@@ -59,7 +59,7 @@
                     <a class="nav-link btn text-white" type="button" href="app/views/hireMe.html">Hire Me</a> 
                  </li>
                  <li class="nav-item">
-                     <a class="nav-link" href="#">About</a>
+                     <a class="nav-link"  href="app/views/about.html">About Us</a>
                  </li>
                  
                  
