--- a/public/app/views/checkoutPayment.html
+++ b/public/app/views/checkoutPayment.html
@@ -1,62 +1,142 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
+
   <base href="/">
-  <title>Card Payment</title>
-  <!-- <link rel="stylesheet" type="text/css" href="assets/css/checkout.css"> -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>check-out-Payment-method-page</title>
+
+  <!--CSS files-->
+  <link rel="stylesheet" type="text/css" href="assets/css/checkoutPay.css">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="asserts/js/checkoutPayment.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script> -->
+  crossorigin="anonymous">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!--Java Script Files-->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="asserts/js/checkoutPayment.js"></script>
+  <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'>
+  </script>
+
 </head>
 
-<body class="bg-info">
-  <div class="row">
-        <div class="col-md-6 offset-md-3" style="background-color: #fff;margin-top: 25px;padding:20px;">
-          <form action="/customer" method="POST" autocomplete="off">
-            <h3>Complete Yor Payment</h3>
-            <img class="img-fluid cc-img" src="http://www.prepbootstrap.com/Content/images/shared/misc/creditcardicons.png">
-            
-          <div class="form-group">
-              <label for="cc-number" class="control-label mb-1">Card Number</label>
-              <input id="cc-number" name="cc-number" type="tel" class="form-control cc-number identified visa" required>
-              <!-- <span class="invalid-feedback">Enter a valid 12 to 16 digit card number</span> -->
-          </div>
+<body ng-app="">
 
-            <div class="row">
+  <!--Header Logo-->
 
-              <div class="col-6">
-                  <div class="form-group">
-                      <label for="exp-date" class="control-label mb-1">Expiration</label>
-                      <input id="exp-date" name="exp-date" type="tel" class="form-control exp-date" required placeholder="MM / YY">
-                      <!-- <span class="invalid-feedback">Enter the expiration date</span> -->
-                  </div>
-              </div>
+  <header class="user__header">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3219/logo.svg" alt="" />
+    <h4 class="user__title">Tasty Meal waiting for You!!!</h4>
+  </header>
 
-              <div class="col-6">
-                <label for="cvv" class="control-label mb-1">CVV</label>
-                <div class="input-group">
-                    <input id="cvv" name="cvv" type="tel" class="form-control cc-cvc" required>
-                    <!-- <span class="invalid-feedback order-last">Enter the 3-digit code on back</span> -->
-                
-                </div>
-            </div>
+  <!--A grid container to hold the checkout options provider form. 1. PickUp 2. Delivery-->
 
-           </div>
-            
-           <div class="form-group">
-            <label for="cc-name" class="control-label mb-1">Name On Card</label>
-            <input id="cc-name" name="cc-name" type="text" class="form-control" placeholder="card owner name">
-            <!-- <span class="help-block" data-valmsg-for="x_zip" data-valmsg-replace="true"></span> -->
+    <section class="grid-container" >
+
+      <div class="heading" ><h4>Select Your Payment Method</h4></div>
+      
+      <!--1st Payment Mode = cash-->  
+<form action="/checkout/status" method="post">
+        <div class="radio Button1">
+          <input ng-model="selection" type="radio" id='cash' name='cashPay' value="cash">
+          <label for='cash'><b>Pay Using Cash.</b></label>
+        </div></form>
+
+      <!--2nd Payment Mode = card--> 
+
+        <div class="radio Button2">
+          <input ng-model="selection" type="radio" id='card' name='cardPay' value="card">
+          <label for='card'><b>Pay Using Card</b></label>
         </div>
+    
+
+    </section>
+
+    <!--Do the appropriate action based on the switch selected
+    There will be 2 option switches, below are their forms
+    1. Pay using Cash
+    2. Pay using card-->
+
+    <div ng-switch="selection" class="animate-switch-container">
+
+      <!--1st switch = pay using cash switch-->
+
+      <div ng-switch-when="cash" class="cash">
+
+      </div>
+
+      <!--2nd switch = pay using card switch-->
+      
+      <div ng-switch-when="card" class="animate-switch">
+
+        <!--2nd option = Delivery option form--> 
         
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary"><i class="fa fa-credit-card"></i> Make Payment</button>
-            </div>
-        </form>
-        </div>
+        <section class="card__grid">
+
+           
+            <div class="row">
+                <div class="col-md-6 offset-md-3" style="background-color: #fff;margin-top: 25px;padding:20px;">
+                  <form action="/checkout/status" method="POST" autocomplete="off">
+                    <h3>Complete Yor Payment</h3>
+                    <img class="img-fluid cc-img" src="http://www.prepbootstrap.com/Content/images/shared/misc/creditcardicons.png">
+                    
+                  <div class="form-group">
+                      <label for="cc-number" class="control-label mb-1">Card Number</label>
+                      <input id="cc-number" name="cc-number" type="tel" class="form-control cc-number identified visa" required>
+                      <!-- <span class="invalid-feedback">Enter a valid 12 to 16 digit card number</span> -->
+                  </div>
+        
+                    <div class="row">
+        
+                      <div class="col-6">
+                          <div class="form-group">
+                              <label for="exp-date" class="control-label mb-1">Expiration</label>
+                              <input id="exp-date" name="exp-date" type="tel" class="form-control exp-date" required placeholder="MM / YY">
+                              <!-- <span class="invalid-feedback">Enter the expiration date</span> -->
+                          </div>
+                      </div>
+        
+                      <div class="col-6">
+                        <label for="cvv" class="control-label mb-1">CVV</label>
+                        <div class="input-group">
+                            <input id="cvv" name="cvv" type="tel" class="form-control cc-cvc" required>
+                            <!-- <span class="invalid-feedback order-last">Enter the 3-digit code on back</span> -->
+                        
+                        </div>
+                    </div>
+        
+                   </div>
+                    
+                   <div class="form-group">
+                    <label for="cc-name" class="control-label mb-1">Name On Card</label>
+                    <input id="cc-name" name="cc-name" type="text" class="form-control" placeholder="card owner name">
+                    <!-- <span class="help-block" data-valmsg-for="x_zip" data-valmsg-replace="true"></span> -->
+                </div>
+                
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary"><i class="fa fa-credit-card"></i> Make Payment</button>
+                    </div>
+                </form>
+          
+
+        </section>
+
+      </div>
+
     </div>
-   
+    <script type='text/javascript'>
+
+        $(document).ready(function() { 
+          $('input[name=cashPay]').change(function(){
+               $('form').submit();
+          });
+         });
+       
+       </script>
 </body>
 </html>
+
+
