--- a/public/app/views/about.html
+++ b/public/app/views/about.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Order</a>
+                        <a class="nav-link" href="app/views/order.html">Order</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Hire Me</a>
@@ -83,7 +83,7 @@
       
          <div class="card">
            <div class="imgBx">
-              <img src="assets/images/chickenTaco.jpg" alt="images">
+              <img src="assets/images/swetha.jpg" alt="images">
            </div>
            <div class="details">
               <h2>Swetha venkatesan<br><span>The Manager</span></h2>
