--- a/public/app/views/order.html
+++ b/public/app/views/order.html
@@ -17,7 +17,7 @@
     <script src="assets/js/angular-animate.js"></script>
 
     <!-- Cascade Style Sheets -->
-    <link rel="stylesheet" type="text/css" href="assets/css/menu.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/order.css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css"> 
@@ -38,7 +38,7 @@
     
     
 
-    <title>Taco Cart Menu</title>
+    <title>La Taco Order</title>
 
 </head>
 
@@ -61,7 +61,7 @@
                     <a class="nav-link" href="app/views/menu.html">Menu <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Order</a>
+                    <a class="nav-link" href="app/views/order.html">Order</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="app/views/hireMe.html">Hire Me</a>
@@ -85,6 +85,27 @@
     </nav>
 </div>
 
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <img src="../../assets/images/flame-1.jpg" alt="Avatar" style="width:100%">
+            <footer>
+                <h2>Flamin Hot Doritos Locos Tacos</h2>
+                <h4>$1.89</h4>
+                <label for="qty">Quantity</label>
+                <select name="qty" id="qty">
+                    <option value="1">Volvo</option>
+                    <option value="2">Saab</option>
+                    <option value="3">Opel</option>
+                    <option value="4">Audi</option>
+                    <option value="5">Audi</option>
+                </select>
+            </footer>
+        </div>
+    </div>
+
+</div>
 
 <footer >
     <div class="container">
