--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -74,7 +74,7 @@
                     <a class="nav-link" href="app/views/menu.html">Menu <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Order</a>
+                    <a class="nav-link" href="app/views/order.html">Order</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="app/views/hireMe.html">Hire Me</a>
