--- a/public/app/views/order.html
+++ b/public/app/views/order.html
@@ -19,7 +19,6 @@
     <!-- Cascade Style Sheets -->
     <link rel="stylesheet" type="text/css" href="assets/css/order.css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css"> 
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/index.css">
@@ -89,22 +88,271 @@
 <div class="row">
     <div class="column">
         <div class="card">
-            <img src="../../assets/images/flame-1.jpg" alt="Avatar" style="width:100%">
-            <footer>
-                <h2>Flamin Hot Doritos Locos Tacos</h2>
-                <h4>$1.89</h4>
+            <header>
+              <h2>Flamin Hot Doritos Locos Tacos</h2>
+            </header>
+            <div class="row">
+                <p>$1.89</p>
                 <label for="qty">Quantity</label>
-                <select name="qty" id="qty">
-                    <option value="1">Volvo</option>
-                    <option value="2">Saab</option>
-                    <option value="3">Opel</option>
-                    <option value="4">Audi</option>
-                    <option value="5">Audi</option>
-                </select>
-            </footer>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                    <option value="none" selected disabled hidden> 
+                      Select an qty 
+                    </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
         </div>
     </div>
+</div>
 
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <header>
+              <h2>Triplelupa</h2>
+            </header>
+            <div class="row">
+                <p>$3.49</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                    <option value="none" selected disabled hidden> 
+                        Select an qty 
+                    </option> 
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <header>
+              <h2>Soft Taco</h2>
+            </header>
+            <div class="row">
+                <p>$1.29</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                  <select name="qty" id="qty"> 
+                    <option value="none" selected disabled hidden> 
+                        Select an qty 
+                    </option> 
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                  </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <header>
+              <h2>Crunchy Taco</h2>
+            </header>
+            <div class="row">
+                <p>$1.29</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <header>
+              <h2>Nacho Cheese Doritos Locos Taco</h2>
+            </header>
+            <div class="row">
+                <p>$1.89</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <header>
+              <h2>Chalupa Supreme</h2>
+            </header>
+            <div class="row">
+                <p>$3.69</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <header>
+              <h2>Cheesy Gordita Crunch</h2>
+            </header>
+            <div class="row">
+                <p>$3.69</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <header>
+              <h2>Spicy Potato Soft Taco </h2>
+            </header>
+            <div class="row">
+                <p>$1.23</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <header>
+              <h2>Crunchwrap Supreme</h2>
+            </header>
+            <div class="row">
+                <p>$3.99</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <footer >
