--- a/public/app/views/order.html
+++ b/public/app/views/order.html
@@ -84,6 +84,22 @@
     </nav>
 </div>
 
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <header>
+                <h1>TACOS</h1>
+            </header>
+        </div>
+    </div>
+    <div class="column">
+        <div class="card">
+            <header>
+                <h1>DRINKS</h1>
+            </header>
+        </div>
+    </div>
+</div>
 
 <div class="row">
     <div class="column">
@@ -113,6 +129,34 @@
             </div>
         </div>
     </div>
+
+    <div class="column">
+        <div class="card">
+            <header>
+              <h2>Pineapple Whip Freeze</h2>
+            </header>
+            <div class="row">
+                <p>$2.69</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 
@@ -143,6 +187,34 @@
             </div>
         </div>
     </div>
+
+    <div class="column">
+        <div class="card">
+            <header>
+              <h2>Tropicanna Pink Lemonade</h2>
+            </header>
+            <div class="row">
+                <p>$2.69</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 
@@ -173,6 +245,34 @@
             </div>
         </div>
     </div>
+
+    <div class="column">
+        <div class="card">
+            <header>
+              <h2>Regular Iced Coffee</h2>
+            </header>
+            <div class="row">
+                <p>$1.29</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 
@@ -203,6 +303,34 @@
             </div>
         </div>
     </div>
+
+    <div class="column">
+        <div class="card">
+            <header>
+              <h2>Wild Strawberry Candy Freeze</h2>
+            </header>
+            <div class="row">
+                <p>$2.69</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 
@@ -233,6 +361,34 @@
             </div>
         </div>
     </div>
+
+    <div class="column">
+        <div class="card">
+            <header>
+              <h2>Mountain Dew Baja Blast Freeze</h2>
+            </header>
+            <div class="row">
+                <p>$2.69</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 
@@ -263,6 +419,34 @@
             </div>
         </div>
     </div>
+
+    <div class="column">
+        <div class="card">
+            <header>
+              <h2>Brisk Mango Fiesta</h2>
+            </header>
+            <div class="row">
+                <p>$1.29</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 
