--- a/public/app/views/order.html
+++ b/public/app/views/order.html
@@ -42,6 +42,9 @@
 </head>
 
 <body ng-app="userApp">
+    <form action="/checkout" method="POST">
+        <button id="checkout" class="checkout" type="submit" >Proceed</button>
+    </from>
    <!-- Collect the nav links, forms, and other content for toggling -->
    <div class="container">
 	
