--- a/public/assets/css/checkoutPay.css
+++ b/public/assets/css/checkoutPay.css
@@ -1,6 +1,7 @@
 *{
   font-family: "Roboto";
  }
+
 body{
   padding-left: 25%;
   padding-right: 25%;
@@ -15,3 +16,79 @@ body{
    
    height: 100vh;
 } 
+
+.grid-container{
+        opacity: 1;
+}
+
+.radio {
+        margin: 1px;
+       /* background-color: red; */
+        color: black;
+        text-align: left;
+        padding-left: 70px;
+        padding-top: 10px;
+        font-size: 15px;  
+      
+      }
+
+ .grid-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 50px);
+        background-color: white;
+        color: black;
+        width: 40fr;
+        padding: 15px;
+        grid-gap: 0px;
+        border-radius: 6px;
+      }
+
+      input[type=radio] {
+        float: left;
+         margin: 3px 3px 3px 3px;
+       }
+   
+   .heading{
+     grid-column-start: 1;
+     grid-column-end: 4;
+     text-align: center;
+
+   }
+
+   .user__title{
+        padding-bottom: 30px;
+        padding-top: 15px;
+   }
+
+   .heading{
+        color:rgb(48, 171, 187);
+        font-size: 20px;
+        }
+        
+.user__header {
+        text-align: center;
+        opacity: 0.5;
+        padding-bottom: 0px;
+        }
+        
+ .user__title{
+        line-height: 0px;
+}
+
+button{
+        width: 100%;
+}
+
+.cardPay-form{
+        border-radius: 9px;
+}
+
+.offset-md-3{
+        background-color: #fff;
+        margin-top: 25px;
+        padding:20px; 
+        border-radius: 6px;
+        
+}
+
