added contact to navbar

--- a/public/app/views/register.html
+++ b/public/app/views/register.html
@@ -56,9 +56,9 @@
                     <a class="nav-link" href="app/views/about.html">About Us</a>
                 </li>
                  
-                 <li class="nav-item">
-                     <a class="nav-link" href="#">Contact</a>
-                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="app/views/contact.html">Contact</a>
+                </li>
                  <li class="nav-item">
                      <a class="nav-link btn text-white" type="button" href="app/views/login.html">Sign In</a>                  
                  </li>
