--- a/public/app/views/login.html
+++ b/public/app/views/login.html
@@ -57,9 +57,9 @@
                 </li>
                  
                  
-                 <li class="nav-item">
-                     <a class="nav-link" href="#">Contact</a>
-                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="app/views/contact.html">Contact</a>
+                </li>
                  <li class="nav-item">
                      <a class="nav-link btn text-white" type="button" href="app/views/login.html">Sign In</a>                  
                  </li>
