contact href added

--- a/public/app/views/contact.html
+++ b/public/app/views/contact.html
@@ -57,7 +57,7 @@
                     
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="app/views/contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link btn text-white" type="button" href="app/views/login.html">Sign In</a>                  
