--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -7,7 +7,7 @@ body {
   #contact {
     width: 100%;
     height: 100vh;
-    background-color: #111;
+    background-color: rgb(110, 194, 185);
     overflow: hidden;
     padding-bottom: 200px;
   }
@@ -47,16 +47,18 @@ body {
   
   .send-button {
     margin-top: 15px;
-    height: 34px;
+    height: 50px;
     width: 400px;
     overflow: hidden;
     transition: all .2s ease-in-out;
+    color: black;
   }
   
   .button {
     width: 400px;
     height: 34px;
     transition: all .2s ease-in-out;
+    color: black;
   }
   
   .send-text {
@@ -64,6 +66,7 @@ body {
     margin-top: 10px;
     font: 300 14px 'Lato', sans-serif;
     letter-spacing: 2px;
+    
   }
   
   .button:hover {
@@ -86,13 +89,13 @@ body {
   
   .list-item {
     line-height: 4;
-    color: #aaa;
+    color: black;
   }
   
   .contact-text {
     font: 300 18px 'Lato', sans-serif;
     letter-spacing: 1.9px;
-    color: #bbb;
+    color:black;
   }
   
   .place {
@@ -108,13 +111,13 @@ body {
   }
   
   .contact-text a {
-    color: #bbb;
+    color: black;
     text-decoration: none;
     transition-duration: 0.2s;
   }
   
   .contact-text a:hover {
-    color: #fff;
+    color: black;
     text-decoration: none;
   }
   
